--- a/packages/web-ui/index.html
+++ b/packages/web-ui/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
+    <script src="/ruffle/ruffle.js" vite-ignore></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
